code-gen/minijs.output
Grammar

    0 $accept: program $end

    1 program: global_list function_list

    2 global_list: ε
    3            | global_list global_var

    4 global_var: _VARDEC _ID _SEMICOLON

    5 function_list: function
    6              | function_list function

    7 $@1: ε

    8 function: _FUNCDEC _ID $@1 _LPAREN parameters _RPAREN body

    9 $@2: ε

   10 function: _VARDEC _ID _ASSIGN $@2 arrow_parameters _ARROW body

   11 $@3: ε

   12 function: _VARDEC _ID _ASSIGN $@3 _FUNCDEC _LPAREN parameters _RPAREN body

   13 parameters: ε
   14           | parameter_list

   15 arrow_parameters: _LPAREN _RPAREN
   16                 | parameter
   17                 | _LPAREN parameter_list _RPAREN

   18 parameter_list: parameter
   19               | parameter_list _COMMA parameter

   20 parameter: _ID

   21 $@4: ε

   22 body: _LBRACKET variable_list $@4 statement_list _RBRACKET

   23 variable_list: ε
   24              | variable_list variable

   25 variable: _VARDEC _ID _SEMICOLON
   26         | _VARDEC _ID _ASSIGN num_exp _SEMICOLON

   27 statement_list: ε
   28               | statement_list statement

   29 statement: compound_statement
   30          | assignment_statement
   31          | if_statement
   32          | return_statement
   33          | while_statement
   34          | break_statement
   35          | continue_statement
   36          | postincrement_statement
   37          | postdecrement_statement

   38 @5: ε

   39 $@6: ε

   40 while_statement: _WHILE @5 _LPAREN rel_exp _RPAREN $@6 _LBRACKET statement_list _RBRACKET

   41 break_statement: _BREAK _SEMICOLON

   42 continue_statement: _CONTINUE _SEMICOLON

   43 postincrement_statement: _ID _POSTINCREMENT _SEMICOLON

   44 postdecrement_statement: _ID _POSTDECREMENT _SEMICOLON

   45 compound_statement: _LBRACKET statement_list _RBRACKET

   46 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   47 num_exp: exp
   48        | num_exp _AROP exp

   49 exp: literal
   50    | _ID
   51    | function_call
   52    | _LPAREN num_exp _RPAREN

   53 literal: _NUMBER

   54 $@7: ε

   55 function_call: _ID $@7 _LPAREN arguments _RPAREN

   56 arguments: ε
   57          | argument_list

   58 argument_list: argument
   59              | argument_list _COMMA argument

   60 argument: num_exp

   61 if_statement: if_part
   62             | if_part _ELSE statement

   63 @8: ε

   64 $@9: ε

   65 if_part: _IF _LPAREN @8 rel_exp $@9 _RPAREN statement

   66 rel_exp: num_exp _RELOP num_exp

   67 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _VARDEC <i> (258) 4 10 12 25 26
    _FUNCDEC (259) 8 12
    _ARROW (260) 10
    _COMMA (261) 19 59
    _WHILE (262) 40
    _BREAK (263) 41
    _CONTINUE (264) 42
    _POSTINCREMENT (265) 43
    _POSTDECREMENT (266) 44
    _IF (267) 65
    _ELSE (268) 62
    _RETURN (269) 67
    _ID <s> (270) 4 8 10 12 20 25 26 43 44 46 50 55
    _NUMBER <s> (271) 53
    _LPAREN (272) 8 12 15 17 40 52 55 65
    _RPAREN (273) 8 12 15 17 40 52 55 65
    _LBRACKET (274) 22 40 45
    _RBRACKET (275) 22 40 45
    _ASSIGN (276) 10 12 26 46
    _SEMICOLON (277) 4 25 26 41 42 43 44 46 67
    _AROP <i> (278) 48
    _RELOP <i> (279) 66
    ONLY_IF (280)


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    program (27)
        on left: 1
        on right: 0
    global_list (28)
        on left: 2 3
        on right: 1 3
    global_var (29)
        on left: 4
        on right: 3
    function_list (30)
        on left: 5 6
        on right: 1 6
    function (31)
        on left: 8 10 12
        on right: 5 6
    $@1 (32)
        on left: 7
        on right: 8
    $@2 (33)
        on left: 9
        on right: 10
    $@3 (34)
        on left: 11
        on right: 12
    parameters (35)
        on left: 13 14
        on right: 8 12
    arrow_parameters (36)
        on left: 15 16 17
        on right: 10
    parameter_list (37)
        on left: 18 19
        on right: 14 17 19
    parameter (38)
        on left: 20
        on right: 16 18 19
    body (39)
        on left: 22
        on right: 8 10 12
    $@4 (40)
        on left: 21
        on right: 22
    variable_list (41)
        on left: 23 24
        on right: 22 24
    variable (42)
        on left: 25 26
        on right: 24
    statement_list (43)
        on left: 27 28
        on right: 22 28 40 45
    statement (44)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 28 62 65
    while_statement (45)
        on left: 40
        on right: 33
    @5 (46)
        on left: 38
        on right: 40
    $@6 (47)
        on left: 39
        on right: 40
    break_statement (48)
        on left: 41
        on right: 34
    continue_statement (49)
        on left: 42
        on right: 35
    postincrement_statement (50)
        on left: 43
        on right: 36
    postdecrement_statement (51)
        on left: 44
        on right: 37
    compound_statement (52)
        on left: 45
        on right: 29
    assignment_statement (53)
        on left: 46
        on right: 30
    num_exp <i> (54)
        on left: 47 48
        on right: 26 46 48 52 60 66 67
    exp <i> (55)
        on left: 49 50 51 52
        on right: 47 48
    literal <i> (56)
        on left: 53
        on right: 49
    function_call <i> (57)
        on left: 55
        on right: 51
    $@7 (58)
        on left: 54
        on right: 55
    arguments <i> (59)
        on left: 56 57
        on right: 55
    argument_list <i> (60)
        on left: 58 59
        on right: 57 59
    argument <i> (61)
        on left: 60
        on right: 58 59
    if_statement (62)
        on left: 61 62
        on right: 31
    if_part <i> (63)
        on left: 65
        on right: 61 62
    @8 (64)
        on left: 63
        on right: 65
    $@9 (65)
        on left: 64
        on right: 65
    rel_exp <i> (66)
        on left: 66
        on right: 40 65
    return_statement (67)
        on left: 67
        on right: 32


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (global_list)

    program      go to state 1
    global_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: global_list • function_list
    3 global_list: global_list • global_var

    _VARDEC   shift, and go to state 4
    _FUNCDEC  shift, and go to state 5

    global_var     go to state 6
    function_list  go to state 7
    function       go to state 8


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 global_var: _VARDEC • _ID _SEMICOLON
   10 function: _VARDEC • _ID _ASSIGN $@2 arrow_parameters _ARROW body
   12         | _VARDEC • _ID _ASSIGN $@3 _FUNCDEC _LPAREN parameters _RPAREN body

    _ID  shift, and go to state 9


State 5

    8 function: _FUNCDEC • _ID $@1 _LPAREN parameters _RPAREN body

    _ID  shift, and go to state 10


State 6

    3 global_list: global_list global_var •

    $default  reduce using rule 3 (global_list)


State 7

    1 program: global_list function_list •
    6 function_list: function_list • function

    _VARDEC   shift, and go to state 11
    _FUNCDEC  shift, and go to state 5

    $default  reduce using rule 1 (program)

    function  go to state 12


State 8

    5 function_list: function •

    $default  reduce using rule 5 (function_list)


State 9

    4 global_var: _VARDEC _ID • _SEMICOLON
   10 function: _VARDEC _ID • _ASSIGN $@2 arrow_parameters _ARROW body
   12         | _VARDEC _ID • _ASSIGN $@3 _FUNCDEC _LPAREN parameters _RPAREN body

    _ASSIGN     shift, and go to state 13
    _SEMICOLON  shift, and go to state 14


State 10

    8 function: _FUNCDEC _ID • $@1 _LPAREN parameters _RPAREN body

    $default  reduce using rule 7 ($@1)

    $@1  go to state 15


State 11

   10 function: _VARDEC • _ID _ASSIGN $@2 arrow_parameters _ARROW body
   12         | _VARDEC • _ID _ASSIGN $@3 _FUNCDEC _LPAREN parameters _RPAREN body

    _ID  shift, and go to state 16


State 12

    6 function_list: function_list function •

    $default  reduce using rule 6 (function_list)


State 13

   10 function: _VARDEC _ID _ASSIGN • $@2 arrow_parameters _ARROW body
   12         | _VARDEC _ID _ASSIGN • $@3 _FUNCDEC _LPAREN parameters _RPAREN body

    _FUNCDEC  reduce using rule 11 ($@3)
    $default  reduce using rule 9 ($@2)

    $@2  go to state 17
    $@3  go to state 18


State 14

    4 global_var: _VARDEC _ID _SEMICOLON •

    $default  reduce using rule 4 (global_var)


State 15

    8 function: _FUNCDEC _ID $@1 • _LPAREN parameters _RPAREN body

    _LPAREN  shift, and go to state 19


State 16

   10 function: _VARDEC _ID • _ASSIGN $@2 arrow_parameters _ARROW body
   12         | _VARDEC _ID • _ASSIGN $@3 _FUNCDEC _LPAREN parameters _RPAREN body

    _ASSIGN  shift, and go to state 13


State 17

   10 function: _VARDEC _ID _ASSIGN $@2 • arrow_parameters _ARROW body

    _ID      shift, and go to state 20
    _LPAREN  shift, and go to state 21

    arrow_parameters  go to state 22
    parameter         go to state 23


State 18

   12 function: _VARDEC _ID _ASSIGN $@3 • _FUNCDEC _LPAREN parameters _RPAREN body

    _FUNCDEC  shift, and go to state 24


State 19

    8 function: _FUNCDEC _ID $@1 _LPAREN • parameters _RPAREN body

    _ID  shift, and go to state 20

    $default  reduce using rule 13 (parameters)

    parameters      go to state 25
    parameter_list  go to state 26
    parameter       go to state 27


State 20

   20 parameter: _ID •

    $default  reduce using rule 20 (parameter)


State 21

   15 arrow_parameters: _LPAREN • _RPAREN
   17                 | _LPAREN • parameter_list _RPAREN

    _ID      shift, and go to state 20
    _RPAREN  shift, and go to state 28

    parameter_list  go to state 29
    parameter       go to state 27


State 22

   10 function: _VARDEC _ID _ASSIGN $@2 arrow_parameters • _ARROW body

    _ARROW  shift, and go to state 30


State 23

   16 arrow_parameters: parameter •

    $default  reduce using rule 16 (arrow_parameters)


State 24

   12 function: _VARDEC _ID _ASSIGN $@3 _FUNCDEC • _LPAREN parameters _RPAREN body

    _LPAREN  shift, and go to state 31


State 25

    8 function: _FUNCDEC _ID $@1 _LPAREN parameters • _RPAREN body

    _RPAREN  shift, and go to state 32


State 26

   14 parameters: parameter_list •
   19 parameter_list: parameter_list • _COMMA parameter

    _COMMA  shift, and go to state 33

    $default  reduce using rule 14 (parameters)


State 27

   18 parameter_list: parameter •

    $default  reduce using rule 18 (parameter_list)


State 28

   15 arrow_parameters: _LPAREN _RPAREN •

    $default  reduce using rule 15 (arrow_parameters)


State 29

   17 arrow_parameters: _LPAREN parameter_list • _RPAREN
   19 parameter_list: parameter_list • _COMMA parameter

    _COMMA   shift, and go to state 33
    _RPAREN  shift, and go to state 34


State 30

   10 function: _VARDEC _ID _ASSIGN $@2 arrow_parameters _ARROW • body

    _LBRACKET  shift, and go to state 35

    body  go to state 36


State 31

   12 function: _VARDEC _ID _ASSIGN $@3 _FUNCDEC _LPAREN • parameters _RPAREN body

    _ID  shift, and go to state 20

    $default  reduce using rule 13 (parameters)

    parameters      go to state 37
    parameter_list  go to state 26
    parameter       go to state 27


State 32

    8 function: _FUNCDEC _ID $@1 _LPAREN parameters _RPAREN • body

    _LBRACKET  shift, and go to state 35

    body  go to state 38


State 33

   19 parameter_list: parameter_list _COMMA • parameter

    _ID  shift, and go to state 20

    parameter  go to state 39


State 34

   17 arrow_parameters: _LPAREN parameter_list _RPAREN •

    $default  reduce using rule 17 (arrow_parameters)


State 35

   22 body: _LBRACKET • variable_list $@4 statement_list _RBRACKET

    $default  reduce using rule 23 (variable_list)

    variable_list  go to state 40


State 36

   10 function: _VARDEC _ID _ASSIGN $@2 arrow_parameters _ARROW body •

    $default  reduce using rule 10 (function)


State 37

   12 function: _VARDEC _ID _ASSIGN $@3 _FUNCDEC _LPAREN parameters • _RPAREN body

    _RPAREN  shift, and go to state 41


State 38

    8 function: _FUNCDEC _ID $@1 _LPAREN parameters _RPAREN body •

    $default  reduce using rule 8 (function)


State 39

   19 parameter_list: parameter_list _COMMA parameter •

    $default  reduce using rule 19 (parameter_list)


State 40

   22 body: _LBRACKET variable_list • $@4 statement_list _RBRACKET
   24 variable_list: variable_list • variable

    _VARDEC  shift, and go to state 42

    $default  reduce using rule 21 ($@4)

    $@4       go to state 43
    variable  go to state 44


State 41

   12 function: _VARDEC _ID _ASSIGN $@3 _FUNCDEC _LPAREN parameters _RPAREN • body

    _LBRACKET  shift, and go to state 35

    body  go to state 45


State 42

   25 variable: _VARDEC • _ID _SEMICOLON
   26         | _VARDEC • _ID _ASSIGN num_exp _SEMICOLON

    _ID  shift, and go to state 46


State 43

   22 body: _LBRACKET variable_list $@4 • statement_list _RBRACKET

    $default  reduce using rule 27 (statement_list)

    statement_list  go to state 47


State 44

   24 variable_list: variable_list variable •

    $default  reduce using rule 24 (variable_list)


State 45

   12 function: _VARDEC _ID _ASSIGN $@3 _FUNCDEC _LPAREN parameters _RPAREN body •

    $default  reduce using rule 12 (function)


State 46

   25 variable: _VARDEC _ID • _SEMICOLON
   26         | _VARDEC _ID • _ASSIGN num_exp _SEMICOLON

    _ASSIGN     shift, and go to state 48
    _SEMICOLON  shift, and go to state 49


State 47

   22 body: _LBRACKET variable_list $@4 statement_list • _RBRACKET
   28 statement_list: statement_list • statement

    _WHILE     shift, and go to state 50
    _BREAK     shift, and go to state 51
    _CONTINUE  shift, and go to state 52
    _IF        shift, and go to state 53
    _RETURN    shift, and go to state 54
    _ID        shift, and go to state 55
    _LBRACKET  shift, and go to state 56
    _RBRACKET  shift, and go to state 57

    statement                go to state 58
    while_statement          go to state 59
    break_statement          go to state 60
    continue_statement       go to state 61
    postincrement_statement  go to state 62
    postdecrement_statement  go to state 63
    compound_statement       go to state 64
    assignment_statement     go to state 65
    if_statement             go to state 66
    if_part                  go to state 67
    return_statement         go to state 68


State 48

   26 variable: _VARDEC _ID _ASSIGN • num_exp _SEMICOLON

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    num_exp        go to state 72
    exp            go to state 73
    literal        go to state 74
    function_call  go to state 75


State 49

   25 variable: _VARDEC _ID _SEMICOLON •

    $default  reduce using rule 25 (variable)


State 50

   40 while_statement: _WHILE • @5 _LPAREN rel_exp _RPAREN $@6 _LBRACKET statement_list _RBRACKET

    $default  reduce using rule 38 (@5)

    @5  go to state 76


State 51

   41 break_statement: _BREAK • _SEMICOLON

    _SEMICOLON  shift, and go to state 77


State 52

   42 continue_statement: _CONTINUE • _SEMICOLON

    _SEMICOLON  shift, and go to state 78


State 53

   65 if_part: _IF • _LPAREN @8 rel_exp $@9 _RPAREN statement

    _LPAREN  shift, and go to state 79


State 54

   67 return_statement: _RETURN • num_exp _SEMICOLON

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    num_exp        go to state 80
    exp            go to state 73
    literal        go to state 74
    function_call  go to state 75


State 55

   43 postincrement_statement: _ID • _POSTINCREMENT _SEMICOLON
   44 postdecrement_statement: _ID • _POSTDECREMENT _SEMICOLON
   46 assignment_statement: _ID • _ASSIGN num_exp _SEMICOLON

    _POSTINCREMENT  shift, and go to state 81
    _POSTDECREMENT  shift, and go to state 82
    _ASSIGN         shift, and go to state 83


State 56

   45 compound_statement: _LBRACKET • statement_list _RBRACKET

    $default  reduce using rule 27 (statement_list)

    statement_list  go to state 84


State 57

   22 body: _LBRACKET variable_list $@4 statement_list _RBRACKET •

    $default  reduce using rule 22 (body)


State 58

   28 statement_list: statement_list statement •

    $default  reduce using rule 28 (statement_list)


State 59

   33 statement: while_statement •

    $default  reduce using rule 33 (statement)


State 60

   34 statement: break_statement •

    $default  reduce using rule 34 (statement)


State 61

   35 statement: continue_statement •

    $default  reduce using rule 35 (statement)


State 62

   36 statement: postincrement_statement •

    $default  reduce using rule 36 (statement)


State 63

   37 statement: postdecrement_statement •

    $default  reduce using rule 37 (statement)


State 64

   29 statement: compound_statement •

    $default  reduce using rule 29 (statement)


State 65

   30 statement: assignment_statement •

    $default  reduce using rule 30 (statement)


State 66

   31 statement: if_statement •

    $default  reduce using rule 31 (statement)


State 67

   61 if_statement: if_part •
   62             | if_part • _ELSE statement

    _ELSE  shift, and go to state 85

    $default  reduce using rule 61 (if_statement)


State 68

   32 statement: return_statement •

    $default  reduce using rule 32 (statement)


State 69

   50 exp: _ID •
   55 function_call: _ID • $@7 _LPAREN arguments _RPAREN

    _LPAREN   reduce using rule 54 ($@7)
    $default  reduce using rule 50 (exp)

    $@7  go to state 86


State 70

   53 literal: _NUMBER •

    $default  reduce using rule 53 (literal)


State 71

   52 exp: _LPAREN • num_exp _RPAREN

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    num_exp        go to state 87
    exp            go to state 73
    literal        go to state 74
    function_call  go to state 75


State 72

   26 variable: _VARDEC _ID _ASSIGN num_exp • _SEMICOLON
   48 num_exp: num_exp • _AROP exp

    _SEMICOLON  shift, and go to state 88
    _AROP       shift, and go to state 89


State 73

   47 num_exp: exp •

    $default  reduce using rule 47 (num_exp)


State 74

   49 exp: literal •

    $default  reduce using rule 49 (exp)


State 75

   51 exp: function_call •

    $default  reduce using rule 51 (exp)


State 76

   40 while_statement: _WHILE @5 • _LPAREN rel_exp _RPAREN $@6 _LBRACKET statement_list _RBRACKET

    _LPAREN  shift, and go to state 90


State 77

   41 break_statement: _BREAK _SEMICOLON •

    $default  reduce using rule 41 (break_statement)


State 78

   42 continue_statement: _CONTINUE _SEMICOLON •

    $default  reduce using rule 42 (continue_statement)


State 79

   65 if_part: _IF _LPAREN • @8 rel_exp $@9 _RPAREN statement

    $default  reduce using rule 63 (@8)

    @8  go to state 91


State 80

   48 num_exp: num_exp • _AROP exp
   67 return_statement: _RETURN num_exp • _SEMICOLON

    _SEMICOLON  shift, and go to state 92
    _AROP       shift, and go to state 89


State 81

   43 postincrement_statement: _ID _POSTINCREMENT • _SEMICOLON

    _SEMICOLON  shift, and go to state 93


State 82

   44 postdecrement_statement: _ID _POSTDECREMENT • _SEMICOLON

    _SEMICOLON  shift, and go to state 94


State 83

   46 assignment_statement: _ID _ASSIGN • num_exp _SEMICOLON

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    num_exp        go to state 95
    exp            go to state 73
    literal        go to state 74
    function_call  go to state 75


State 84

   28 statement_list: statement_list • statement
   45 compound_statement: _LBRACKET statement_list • _RBRACKET

    _WHILE     shift, and go to state 50
    _BREAK     shift, and go to state 51
    _CONTINUE  shift, and go to state 52
    _IF        shift, and go to state 53
    _RETURN    shift, and go to state 54
    _ID        shift, and go to state 55
    _LBRACKET  shift, and go to state 56
    _RBRACKET  shift, and go to state 96

    statement                go to state 58
    while_statement          go to state 59
    break_statement          go to state 60
    continue_statement       go to state 61
    postincrement_statement  go to state 62
    postdecrement_statement  go to state 63
    compound_statement       go to state 64
    assignment_statement     go to state 65
    if_statement             go to state 66
    if_part                  go to state 67
    return_statement         go to state 68


State 85

   62 if_statement: if_part _ELSE • statement

    _WHILE     shift, and go to state 50
    _BREAK     shift, and go to state 51
    _CONTINUE  shift, and go to state 52
    _IF        shift, and go to state 53
    _RETURN    shift, and go to state 54
    _ID        shift, and go to state 55
    _LBRACKET  shift, and go to state 56

    statement                go to state 97
    while_statement          go to state 59
    break_statement          go to state 60
    continue_statement       go to state 61
    postincrement_statement  go to state 62
    postdecrement_statement  go to state 63
    compound_statement       go to state 64
    assignment_statement     go to state 65
    if_statement             go to state 66
    if_part                  go to state 67
    return_statement         go to state 68


State 86

   55 function_call: _ID $@7 • _LPAREN arguments _RPAREN

    _LPAREN  shift, and go to state 98


State 87

   48 num_exp: num_exp • _AROP exp
   52 exp: _LPAREN num_exp • _RPAREN

    _RPAREN  shift, and go to state 99
    _AROP    shift, and go to state 89


State 88

   26 variable: _VARDEC _ID _ASSIGN num_exp _SEMICOLON •

    $default  reduce using rule 26 (variable)


State 89

   48 num_exp: num_exp _AROP • exp

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    exp            go to state 100
    literal        go to state 74
    function_call  go to state 75


State 90

   40 while_statement: _WHILE @5 _LPAREN • rel_exp _RPAREN $@6 _LBRACKET statement_list _RBRACKET

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    num_exp        go to state 101
    exp            go to state 73
    literal        go to state 74
    function_call  go to state 75
    rel_exp        go to state 102


State 91

   65 if_part: _IF _LPAREN @8 • rel_exp $@9 _RPAREN statement

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    num_exp        go to state 101
    exp            go to state 73
    literal        go to state 74
    function_call  go to state 75
    rel_exp        go to state 103


State 92

   67 return_statement: _RETURN num_exp _SEMICOLON •

    $default  reduce using rule 67 (return_statement)


State 93

   43 postincrement_statement: _ID _POSTINCREMENT _SEMICOLON •

    $default  reduce using rule 43 (postincrement_statement)


State 94

   44 postdecrement_statement: _ID _POSTDECREMENT _SEMICOLON •

    $default  reduce using rule 44 (postdecrement_statement)


State 95

   46 assignment_statement: _ID _ASSIGN num_exp • _SEMICOLON
   48 num_exp: num_exp • _AROP exp

    _SEMICOLON  shift, and go to state 104
    _AROP       shift, and go to state 89


State 96

   45 compound_statement: _LBRACKET statement_list _RBRACKET •

    $default  reduce using rule 45 (compound_statement)


State 97

   62 if_statement: if_part _ELSE statement •

    $default  reduce using rule 62 (if_statement)


State 98

   55 function_call: _ID $@7 _LPAREN • arguments _RPAREN

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    $default  reduce using rule 56 (arguments)

    num_exp        go to state 105
    exp            go to state 73
    literal        go to state 74
    function_call  go to state 75
    arguments      go to state 106
    argument_list  go to state 107
    argument       go to state 108


State 99

   52 exp: _LPAREN num_exp _RPAREN •

    $default  reduce using rule 52 (exp)


State 100

   48 num_exp: num_exp _AROP exp •

    $default  reduce using rule 48 (num_exp)


State 101

   48 num_exp: num_exp • _AROP exp
   66 rel_exp: num_exp • _RELOP num_exp

    _AROP   shift, and go to state 89
    _RELOP  shift, and go to state 109


State 102

   40 while_statement: _WHILE @5 _LPAREN rel_exp • _RPAREN $@6 _LBRACKET statement_list _RBRACKET

    _RPAREN  shift, and go to state 110


State 103

   65 if_part: _IF _LPAREN @8 rel_exp • $@9 _RPAREN statement

    $default  reduce using rule 64 ($@9)

    $@9  go to state 111


State 104

   46 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON •

    $default  reduce using rule 46 (assignment_statement)


State 105

   48 num_exp: num_exp • _AROP exp
   60 argument: num_exp •

    _AROP  shift, and go to state 89

    $default  reduce using rule 60 (argument)


State 106

   55 function_call: _ID $@7 _LPAREN arguments • _RPAREN

    _RPAREN  shift, and go to state 112


State 107

   57 arguments: argument_list •
   59 argument_list: argument_list • _COMMA argument

    _COMMA  shift, and go to state 113

    $default  reduce using rule 57 (arguments)


State 108

   58 argument_list: argument •

    $default  reduce using rule 58 (argument_list)


State 109

   66 rel_exp: num_exp _RELOP • num_exp

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    num_exp        go to state 114
    exp            go to state 73
    literal        go to state 74
    function_call  go to state 75


State 110

   40 while_statement: _WHILE @5 _LPAREN rel_exp _RPAREN • $@6 _LBRACKET statement_list _RBRACKET

    $default  reduce using rule 39 ($@6)

    $@6  go to state 115


State 111

   65 if_part: _IF _LPAREN @8 rel_exp $@9 • _RPAREN statement

    _RPAREN  shift, and go to state 116


State 112

   55 function_call: _ID $@7 _LPAREN arguments _RPAREN •

    $default  reduce using rule 55 (function_call)


State 113

   59 argument_list: argument_list _COMMA • argument

    _ID      shift, and go to state 69
    _NUMBER  shift, and go to state 70
    _LPAREN  shift, and go to state 71

    num_exp        go to state 105
    exp            go to state 73
    literal        go to state 74
    function_call  go to state 75
    argument       go to state 117


State 114

   48 num_exp: num_exp • _AROP exp
   66 rel_exp: num_exp _RELOP num_exp •

    _AROP  shift, and go to state 89

    $default  reduce using rule 66 (rel_exp)


State 115

   40 while_statement: _WHILE @5 _LPAREN rel_exp _RPAREN $@6 • _LBRACKET statement_list _RBRACKET

    _LBRACKET  shift, and go to state 118


State 116

   65 if_part: _IF _LPAREN @8 rel_exp $@9 _RPAREN • statement

    _WHILE     shift, and go to state 50
    _BREAK     shift, and go to state 51
    _CONTINUE  shift, and go to state 52
    _IF        shift, and go to state 53
    _RETURN    shift, and go to state 54
    _ID        shift, and go to state 55
    _LBRACKET  shift, and go to state 56

    statement                go to state 119
    while_statement          go to state 59
    break_statement          go to state 60
    continue_statement       go to state 61
    postincrement_statement  go to state 62
    postdecrement_statement  go to state 63
    compound_statement       go to state 64
    assignment_statement     go to state 65
    if_statement             go to state 66
    if_part                  go to state 67
    return_statement         go to state 68


State 117

   59 argument_list: argument_list _COMMA argument •

    $default  reduce using rule 59 (argument_list)


State 118

   40 while_statement: _WHILE @5 _LPAREN rel_exp _RPAREN $@6 _LBRACKET • statement_list _RBRACKET

    $default  reduce using rule 27 (statement_list)

    statement_list  go to state 120


State 119

   65 if_part: _IF _LPAREN @8 rel_exp $@9 _RPAREN statement •

    $default  reduce using rule 65 (if_part)


State 120

   28 statement_list: statement_list • statement
   40 while_statement: _WHILE @5 _LPAREN rel_exp _RPAREN $@6 _LBRACKET statement_list • _RBRACKET

    _WHILE     shift, and go to state 50
    _BREAK     shift, and go to state 51
    _CONTINUE  shift, and go to state 52
    _IF        shift, and go to state 53
    _RETURN    shift, and go to state 54
    _ID        shift, and go to state 55
    _LBRACKET  shift, and go to state 56
    _RBRACKET  shift, and go to state 121

    statement                go to state 58
    while_statement          go to state 59
    break_statement          go to state 60
    continue_statement       go to state 61
    postincrement_statement  go to state 62
    postdecrement_statement  go to state 63
    compound_statement       go to state 64
    assignment_statement     go to state 65
    if_statement             go to state 66
    if_part                  go to state 67
    return_statement         go to state 68


State 121

   40 while_statement: _WHILE @5 _LPAREN rel_exp _RPAREN $@6 _LBRACKET statement_list _RBRACKET •

    $default  reduce using rule 40 (while_statement)
